[gd_scene load_steps=7 format=1]

[ext_resource path="res://wolf_enemy/wolf_enemy.gd" type="Script" id=1]
[ext_resource path="res://wolf_enemy/wolf_enemy.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 15, 8 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 16, 9 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 60, 15 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 50, 10 )

[node name="wolf_enemy" type="KinematicBody2D" groups=[ "attack" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, -5 )
texture = ExtResource( 2 )
vframes = 3
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="contact_receiver" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="contact_receiver"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="attack_range" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_range"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="cast_range" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 95.5641, 0.174828 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="cast_range"]

transform/pos = Vector2( 95.5641, 0.174828 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="Label" type="Label" parent="."]

visibility/visible = false
margin/top = -34.0
margin/right = 40.0
margin/bottom = -21.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="body_enter" from="contact_receiver" to="." method="_on_contact_receiver_body_enter"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_enter" from="attack_range" to="." method="_on_attack_range_body_enter"]

[connection signal="body_enter" from="cast_range" to="." method="_on_cast_range_body_enter"]


